--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "asynciterator": "^1.1.1",
     "commander": "^2.15.1",
+    "ldf-client": "^2.0.5",
     "lodash": "^4.17.5",
     "n3": "^0.11.3",
     "request": "^2.85.0",
