--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commander": "^2.15.1",
     "ldf-client": "^2.0.5",
     "lodash": "^4.17.5",
+    "moment": "^2.22.2",
     "n3": "^0.11.3",
     "request": "^2.85.0",
     "sparqljs": "^2.0.3"
