--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "standard --fix",
     "test": "jest --notify",
-    "browserify": "browserify sage-client.js -s sage -o sage-client-browser.js"
+    "build": "browserify sage-client.js -s sage -o sage-client-browser.js"
   },
   "repository": {
     "type": "git",
