--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "sparqljs": "^2.0.3"
   },
   "devDependencies": {
-    "jest": "^22.4.3",
-    "standard": "^11.0.1",
-    "browserify": "^16.2.2"
+    "browserify": "^16.2.2",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "standard": "^11.0.1"
   },
   "standard": {
     "env": [
