--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   },
   "homepage": "https://github.com/sage-org/sage-client#readme",
   "dependencies": {
-    "asynciterator": "^1.1.1",
+    "asynciterator": "^2.0.0",
     "commander": "^2.15.1",
     "ldf-client": "^2.0.5",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "n3": "^0.11.3",
     "request": "^2.85.0",
+    "sparql-engine": "^0.1.0",
     "sparqljs": "^2.0.3"
   },
   "devDependencies": {
