--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sage-client",
   "version": "1.0.1",
   "description": "Javascript client for SaGe interfaces",
-  "main": "./src/sage-client.js",
+  "main": "./src/lib.js",
   "bin": {
     "sage-client": "bin/sage-client.js"
   },
