--- a/package.json
+++ b/package.json
@@ -33,13 +33,9 @@
   "dependencies": {
     "asynciterator": "^2.0.0",
     "commander": "^2.15.1",
-    "ldf-client": "^2.0.5",
     "lodash": "^4.17.5",
-    "moment": "^2.22.2",
-    "n3": "^0.11.3",
     "request": "^2.85.0",
-    "sparql-engine": "^0.1.0",
-    "sparqljs": "^2.0.3"
+    "sparql-engine": "^0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
