--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "commander": "^2.15.1",
     "lodash": "^4.17.5",
     "request": "^2.85.0",
-    "sparql-engine": "^0.2.0"
+    "sparql-engine": "^0.2.1",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
