--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/sage-org/sage-client#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "commander": "^2.15.1",
     "lodash": "^4.17.5",
     "request": "^2.85.0",
