--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sage-client",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Javascript client for SaGe interfaces",
   "main": "./src/lib.js",
   "bin": {
@@ -31,23 +31,24 @@
   },
   "homepage": "https://github.com/sage-org/sage-client#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "commander": "^2.15.1",
-    "lodash": "^4.17.5",
-    "request": "^2.85.0",
-    "sparql-engine": "^0.3.2",
+    "@babel/polyfill": "^7.4.4",
+    "commander": "^2.20.0",
+    "lodash": "^4.17.11",
+    "request": "^2.88.0",
+    "rxjs": "^6.5.2",
+    "sparql-engine": "^0.5.0",
     "xml": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "standard": "^11.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   },
   "standard": {
     "env": [
