--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "sage-client": "bin/sage-client.js"
   },
   "scripts": {
-    "lint": "standard",
     "test": "mocha tests/**/*-test.js",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "tslint -c ./tslint.json --fix src/*.ts src/**/*.ts",
+    "build-ts": "tsc"
   },
   "repository": {
     "type": "git",
@@ -33,19 +34,23 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "commander": "^2.20.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "request": "^2.88.0",
     "rxjs": "^6.5.2",
     "sparql-engine": "^0.5.1",
     "xml": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.12.14",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "standard": "^11.0.1",
+    "tslint": "^5.20.1",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^3.7.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
