add ts version of the http client, rdf graph and bgp evaluator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "allowSyntheticDefaultImports": true,
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./types/"
+    ]
   },
   "include": [
     "src/**/*.ts"
