--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "lodash": "^4.17.15",
     "request": "^2.88.0",
     "rxjs": "^6.5.2",
-    "sparql-engine": "^0.5.1",
+    "sparql-engine": "../sparql-engine/",
+    "sparqljs": "^2.0.3",
     "xml": "^1.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.14",
+    "@types/request": "^2.48.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
