--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 node_js:
-- node
+  - node
 notifications:
   email: false
+before_script:
+  - npm run build-ts
 script:
-- npm run test
+  - npm run test
 before_deploy:
-- npm run build
+  - npm run build
+  - cp wdist/sage-bundle.js dist/sage-bundle.js
 deploy:
 - provider: npm
   skip_cleanup: true
