--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
     "typescript": "^3.7.2",
